# vscode-pytes-debug-issue

./: README.md  pyproject.toml  test_lorem.py
