
[tool.poetry]
name = "vscode-pytes-debug-issue"
version = "0.1.0"
description = "Code for demonstrating how debugging pytest in vscode renders vscode unusable"
authors = ["Samuel C Tyler <skamansam@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.1.13"
pytest = "^7.1.1"
lorem-text = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
